--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -31,7 +31,14 @@ html {
   overflow: hidden; // 隐藏滚动条
 }
 
-.button-no-background {
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+// bui是blinkUI的简写
+.bui-no-background {
   @extend .button;
 
   background: transparent;
@@ -77,22 +84,20 @@ html {
   }
 }
 
-// bui是blinkUI的简写
-.bui-no-background {
-  @extend .button-no-background;
+.bui-btn-titlebar {
+  @extend .bui-no-background;
   @extend .is-light;
+  @extend .pt-2;
 }
 
 .bui-btn-min,
 .bui-btn-max,
 .bui-btn-close {
-  @extend .pt-2;
-  @extend .bui-no-background;
+  @extend .bui-btn-titlebar;
 }
 
 .bui-btn-restore {
-  @extend .pt-2;
-  @extend .bui-no-background;
+  @extend .bui-btn-titlebar;
   @extend .hidden;
 }
 
@@ -112,6 +117,7 @@ html {
   -webkit-app-region: no-drag;
 }
 
+// -------- 其他 --------
 .pointer-cursor {
   cursor: pointer;
   pointer-events: auto;
@@ -119,4 +125,49 @@ html {
 
 .pointer-none {
   pointer-events: none;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tabs-no-border {
+  @extend .tabs;
+
+  ul {
+    border-bottom-width: 0;
+  }
+}
+
+// -------- 本项目的css，不通用的都放这块 --------
+.titlebar-bkg {
+  background: url("/assets/skin/caption_bk.png") 100% 100% no-repeat, linear-gradient(#0e1a2f, #060606);
+  background-size: 100% 100%;
+}
+
+.xmp-btn-titlebar {
+  @extend .bui-no-background;
+  @extend .is-light;
+  @extend .pt-2;
+}
+
+.xmp-btn-titleText {
+  @extend .bui-no-background;
+  color: #8f99a4;
+
+  &:focus,
+  &.is-focused,
+  &:active,
+  &.is-active {
+    color: #8f99a4;
+  }
+
+  &:hover,
+  &.is-hovered {
+    color: #084dc8;
+  }
+}
+
+.bkg-color {
+  background-color: #070707;
 }
